--- a/OpenCartTests/OpenCartTests/OpenCartTests.csproj
+++ b/OpenCartTests/OpenCartTests/OpenCartTests.csproj
@@ -57,8 +57,17 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="HomePageTests.cs" />
+    <Compile Include="Core\BaseTest.cs" />
+    <Compile Include="Core\Driver.cs" />
+    <Compile Include="Data\Models\User.cs" />
+    <Compile Include="Data\TestData.cs" />
+    <Compile Include="Pages\DashboardPage.cs" />
+    <Compile Include="Pages\LoginPage.cs" />
+    <Compile Include="Tests\AdminDemoDashboardPage.cs" />
+    <Compile Include="Tests\AdminLoginPageTests.cs" />
+    <Compile Include="Tests\HomePageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\StoreDemoHomePage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -89,7 +98,9 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Selenium.Chrome.WebDriver.2.45\build\Selenium.Chrome.WebDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.Chrome.WebDriver.2.45\build\Selenium.Chrome.WebDriver.targets'))" />
+    <Error Condition="!Exists('..\packages\Selenium.Firefox.WebDriver.0.23.0\build\Selenium.Firefox.WebDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.Firefox.WebDriver.0.23.0\build\Selenium.Firefox.WebDriver.targets'))" />
   </Target>
+  <Import Project="..\packages\Selenium.Firefox.WebDriver.0.23.0\build\Selenium.Firefox.WebDriver.targets" Condition="Exists('..\packages\Selenium.Firefox.WebDriver.0.23.0\build\Selenium.Firefox.WebDriver.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
